# jsparagus

./: .flake8  .gitignore  Cargo.toml  Makefile  README.md  emit.py  gecko-patches.txt  gen.py  grammar.py  js-quirks.md  known_good_jsparagus  known_good_mc  latest_jsparagus  latest_mc  latest_test  lexer.py  ordered.py  parse_pgen.py  parse_pgen_generated.py  pgen.pgen  pgen.py  pgen_runtime.py  smoosh_build.json  smoosh_test.json  test.py  test.sh  update.sh
.githooks/: pre-commit
.github/workflows/: build.yml  ci-counter.yml  ci-daily.yml  ci-generated.yml  ci-issues.yml  ci-push.yml  real-js-benchmark.yml  rust.yml
.metrics/: README.md  create-ci-branch.sh  fuzzbug.py  fuzzbug_count_badge.py  fuzzbug_date_badge.py  generated_README.md  not_implemented_badge.py  not_implemented_count.py  populate.sh  populate_fuzzbug.sh  populate_not_implemented.sh  tests_compiled_badge.py  tests_compiled_count.py  watchfile
.metrics/badges/: not-implemented.json  open-fuzzbug.json  since-last-fuzzbug.json  test-percentage-compiled.json
.metrics/count/: fuzzbug.json  not-implemented.json  tests_compiled.json
ast/src/: lib.rs
benchmarks/: compare-spidermonkey-parsers.js
client/: Cargo.toml  update_parser_generated.sh
client/src/: ast.rs  lexer.rs  main.rs  parser.rs  parser_generated.rs  parser_runtime.rs
crates/ast/: Cargo.toml  ast.json  generate_ast.py
crates/ast/src/: lib.rs  source_atom_set.rs  source_location.rs  visit_generated.rs
crates/driver/: Cargo.toml
crates/driver/src/: demo.rs  main.rs
crates/emitter/: Cargo.toml
crates/emitter/scripts/: update_opcodes.py
crates/emitter/src/: array_emitter.rs  ast_emitter.rs  atoms.rs  atomset.rs  compilation_info.rs  control_structures.rs  dis.rs  emitter.rs  emitter_scope.rs  forward_jump_emitter.rs  frame_slot.rs  function_declaration_emitter.rs  gcthings.rs  lib.rs  object_emitter.rs  opcode.rs  reference_op_emitter.rs  scope.rs  scope_notes.rs  scope_pass.rs  stencil.rs
crates/emitter/src/copy/: Opcodes.h
crates/generated_parser/: Cargo.toml
crates/generated_parser/src/: ast_builder.rs  context_stack.rs  early_error_checker.rs  early_errors.rs  error.rs  lib.rs  parser_tables_generated.rs  token.rs
crates/generated_parser/src/traits/: mod.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: evaluate.rs  globals.rs  lib.rs  object.rs  tests.js  tests.rs  value.rs
crates/parser/: Cargo.toml
crates/parser/benches/: jquery-3.5.0.slim.min.js  parser.rs
crates/parser/benches/real-js/: %252Fsettings-frontend%252Fartdeco%252Fstatic%252Fjavascripts%252Fartdeco.js  %252Fsettings-frontend%252Fsc-hashes%252Fsc-hashes_en_US.js  %3F%3Fhashmap.b71d7dff.js  %3F%3Futils.js  00f46bfd.js  0298b7f7.js  0729c697c74a3b98.js  0a1d4532.js  0plonllxdeybtmp2dxrzigx12ma.js  1.fc3a.js  11.cache.js  11c713c11ab95b8c.js  1246c847.js  1320644333-cmt__en_gb.js  14.778e.js  153474676-postmessagerelay.js  182800dc.js  18f20739.js  199145f0.js  1a51cd6c.js  1c1f9afe.js  2.cache.js  2074026172-lbx__en_gb.js  212889ae.js  224605e7eefeb438.js  2678081911-legacy-native-bundle-js__fr.js  2833fd0e.js  29e8525d.js  2c96b10f.js  2e84d7984a79ea0b.js  3.84e6.js  319c330c04354c89.js  322834226-widgets.js  33024b45.js  33a1fe72.js  3635378416-v2-idpiframe.js  (+479 more)
crates/parser/src/: lexer.rs  lib.rs  numeric_value.rs  parser.rs  simulator.rs  tests.rs  unicode_data.rs
crates/scope/: Cargo.toml
crates/scope/src/: builder.rs  context.rs  data.rs  lib.rs  pass.rs
crates/stencil/: Cargo.toml
crates/stencil/src/: env_coord.rs  function.rs  gcthings.rs  lib.rs  opcode.rs  result.rs  scope.rs  script.rs
crates/structured/: Cargo.toml
crates/structured/src/: lib.rs
es-grammar/: README.md  emug.pgen  es-simplified.emug  es.emug  es.py  extract-es-grammar.py  parse_emug.py  ponder-es-grammar.py
espg/: emit.py  gen.py  grammar.py  lexer.py  ordered.py  parse_pgen.py  parse_pgen_generated.py  pgen.py  pgen_runtime.py
js_parser/: README.md  emug.pgen  es-simplified.esgrammar  esgrammar.pgen  extract-es-grammar.py  extract_es_grammar.py  generate_js_parser_tables.py  js.py  lexer.py  load_es_grammar.py  parse_emug.py  parse_esgrammar.py  parser.py  ponder-es-grammar.py  try_it.py
jsparagus/: README.md  actions.py  aps.py  emit.py  extension.py  gen.py  grammar.py  lexer.py  lr0.py  ordered.py  parse_pgen.py  parse_pgen_generated.py  parse_table.py  pgen_runtime.py  rewrites.py  runtime.py  types.py  utils.py
jsparagus/emit/: __init__.py  python.py  rust.py
jsparagus/emit/collect_handler_info/: Cargo.toml
mozconfigs/: smoosh-opt
rust/: Cargo.toml
rust/ast/: Cargo.toml  ast.json  generate_ast.py
rust/ast/src/: arena.rs  json.rs  lib.rs  source_location.rs  source_location_accessor.rs  source_location_accessor_generated.rs  types.rs  types_generated.rs  visit.rs  visit_generated.rs
rust/driver/: Cargo.toml
rust/driver/src/: demo.rs  main.rs
rust/emitter/: Cargo.toml
rust/emitter/examples/: shell.rs
rust/emitter/src/: ast_emitter.rs  dis.rs  emitter.rs  lib.rs  opcode.rs  reference_op_emitter.rs
rust/emitter/src/lower/: mod.rs  pass.rs  scope.rs
rust/generated_parser/: Cargo.toml  generate_stack_value.py
rust/generated_parser/src/: ast_builder.rs  early_errors.rs  error.rs  lib.rs  loc_trait_generated.rs  parser_tables_generated.rs  stack_value.rs  stack_value_generated.rs  token.rs
rust/interpreter/: Cargo.toml
rust/interpreter/src/: evaluate.rs  globals.rs  lib.rs  object.rs  tests.rs  value.rs
rust/parser/: Cargo.toml
rust/parser/src/: demo.rs  errors.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser_generated.rs  parser_runtime.rs  simulator.rs  tests.rs
tests/: context.py  test.py  test_js.py  test_parse_pgen.py
(+1 files in other folders)
