[package]
name = "jsparagus"
authors = ["The jsparagus Project Developers"]
version = "0.1.0"
description = "A JavaScript parser"
license = "MIT/Apache-2.0"
repository = "https://github.com/mozilla-spidermonkey/jsparagus"
publish = false
edition = "2018"

[workspace]

[lib]

[dependencies]
jsparagus-ast = { path = "rust/ast" }
jsparagus-driver = { path = "rust/driver", optional = true }
jsparagus-emitter = { path = "rust/emitter" }
jsparagus-generated-parser = { path = "rust/generated_parser" }
jsparagus-parser = { path = "rust/parser" }
jsparagus-interpreter = { path = "rust/interpreter", optional = true  }

[features]
default = []
full = ["jsparagus-driver", "jsparagus-interpreter"]

[profile.release]
debug = true  # enable debug symbols in release builds
