[package]
name = "jsparagus-driver"
version = "0.1.0"
authors = ["khyperia <khyperia@live.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
bumpalo = "2.6.0"
jsparagus-ast = { path = "../ast" }
jsparagus-emitter = { path = "../emitter" }
jsparagus-interpreter = { path = "../interpreter" }
jsparagus-parser = { path = "../parser" }
rustyline = "6.0.0"
rustyline-derive = "0.3.0"

# jemalloc is temporarily disabled due to a known upstream bug (macOS crashes
# in release builds): <https://github.com/gnzlbg/jemallocator/issues/136>
# jemallocator = "0.3.2"
