[package]
name = "jsparagus-driver"
version = "0.1.0"
authors = ["khyperia <khyperia@live.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
bumpalo = "3.11.1"
jsparagus-ast = { path = "../ast" }
jsparagus-emitter = { path = "../emitter" }
jsparagus-interpreter = { path = "../interpreter" }
jsparagus-parser = { path = "../parser" }
jsparagus-stencil = { path = "../stencil" }
log = { version = "0.4.0", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = { version = "0.7.1", default-features = false } # disable `regex`
structopt = "0.3"

# jemalloc is temporarily disabled due to a known upstream bug (macOS crashes
# in release builds): <https://github.com/gnzlbg/jemallocator/issues/136>
# jemallocator = "0.3.2"

[features]
logging = ["jsparagus-parser/logging"]
