[package]
name = "emitter"
version = "0.1.0"
authors = ["khyperia <github@khyperia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
bumpalo = "2.6.0"

[dev-dependencies]
parser = { path = "../parser" }
