[package]
name = "emitter"
version = "0.1.0"
authors = ["khyperia <github@khyperia.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
bumpalo = "2.6.0"
byteorder = "1.3.2"

[dev-dependencies]
parser = { path = "../parser" }
